// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value Stream Analytics LabelsSelector with no item selected will render the label selector 1`] = `
"<gl-dropdown-stub headertext=\\"\\" hideheaderborder=\\"true\\" text=\\"\\" category=\\"primary\\" variant=\\"default\\" size=\\"medium\\" toggleclass=\\"gl-overflow-hidden\\" class=\\"gl-w-full\\">
  <gl-dropdown-section-header-stub>Select a label </gl-dropdown-section-header-stub>
  <div class=\\"mb-3 px-3\\">
    <gl-search-box-by-type-stub value=\\"\\" clearbuttontitle=\\"Clear\\"></gl-search-box-by-type-stub>
  </div>
  <div class=\\"mb-3 px-3\\">
    <gl-dropdown-item-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightarialabel=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\" class=\\"\\">
      <!----> <span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
      roses
    </gl-dropdown-item-stub>
    <gl-dropdown-item-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightarialabel=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\" class=\\"\\">
      <!----> <span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
      some space
    </gl-dropdown-item-stub>
    <gl-dropdown-item-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightarialabel=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\" class=\\"\\">
      <!----> <span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
      violets
    </gl-dropdown-item-stub>
    <div class=\\"text-center\\" style=\\"display: none;\\">
      <gl-loading-icon-stub label=\\"Loading\\" size=\\"md\\" color=\\"dark\\" inline=\\"true\\"></gl-loading-icon-stub>
    </div>
    <div class=\\"text-secondary\\" style=\\"display: none;\\">
      No matching labels
    </div>
  </div>
</gl-dropdown-stub>"
`;

exports[`Value Stream Analytics LabelsSelector with selectedLabelId set will render the label selector 1`] = `
"<gl-dropdown-stub headertext=\\"\\" hideheaderborder=\\"true\\" text=\\"\\" category=\\"primary\\" variant=\\"default\\" size=\\"medium\\" toggleclass=\\"gl-overflow-hidden\\" class=\\"gl-w-full\\">
  <gl-dropdown-section-header-stub>Select a label </gl-dropdown-section-header-stub>
  <div class=\\"mb-3 px-3\\">
    <gl-search-box-by-type-stub value=\\"\\" clearbuttontitle=\\"Clear\\"></gl-search-box-by-type-stub>
  </div>
  <div class=\\"mb-3 px-3\\">
    <gl-dropdown-item-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightarialabel=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\" class=\\"\\">
      <!----> <span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
      roses
    </gl-dropdown-item-stub>
    <gl-dropdown-item-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightarialabel=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\" class=\\"\\">
      <!----> <span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
      some space
    </gl-dropdown-item-stub>
    <gl-dropdown-item-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightarialabel=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\" active=\\"true\\" class=\\"\\">
      <!----> <span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
      violets
    </gl-dropdown-item-stub>
    <div class=\\"text-center\\" style=\\"display: none;\\">
      <gl-loading-icon-stub label=\\"Loading\\" size=\\"md\\" color=\\"dark\\" inline=\\"true\\"></gl-loading-icon-stub>
    </div>
    <div class=\\"text-secondary\\" style=\\"display: none;\\">
      No matching labels
    </div>
  </div>
</gl-dropdown-stub>"
`;
